<resources>
    <string name="app_name">Covid</string>
    <string name="t1">Sé conciente</string>
    <string name="t2">Covid 19</string>
    <string name="aceptar">Aceptar</string>
    <string name="conciente">Aprende la conciencia</string>
    <string name="sintomas">5 Síntomas del Covid</string>
    <string name="leer">Leer Más</string>
    <string name="top">Top Países</string>
    <string name="fav">Favoritos</string>
    <string name="todo">TODO</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>